--- a/src/components/Botones.css
+++ b/src/components/Botones.css
@@ -299,7 +299,7 @@ button {
 
 .modal-overlay {
   position: absolute;
-  top: 0;
+  top: 1rem;
   left: 0;
   width: 100%;
   height: 100%;
@@ -320,10 +320,12 @@ button {
   max-height: auto;
   overflow: hidden;
   position: relative;
+  align-items:center;
+  justify-content:center;
 }
 .cerrar-modal {
   position: absolute;
-  top: 0;
+  top: 0rem;
   right: 0.6em;
   font-size: 2.5em;
   background: none;
@@ -415,7 +417,11 @@ button {
     align-items: center;
 	justify-content: center;
   }
-  
+   .botones-container {
+  	min-height: 100vh;
+	max-height: 100vh;
+   }
+
   .apps-colapsadas img {
   width: 11vh;
   height: 12vh;
